Add doctype; remove IE-standards-enabling meta element; add notice about unofficial nature of the testsuite and a disclosure.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=8"/>
 <script type="text/javascript" src="SimpleTestHarness/sth.js"></script>
 <script>
 var ES5Harness = activeSth;
 </script>
 </head>
 <body>
+<p style="background:#f55;color:#fff;padding:5px;margin-top:0">
+  This is an <strong>unofficially</strong> hosted version of an official <a href="http://es5conform.codeplex.com/" style="color:#fff">ES5 conformance test suite</a>. I just host it on github to be able to run it online. No modifications were made to the test suite, except added doctype and removed <code>&lt;meta http-equiv="X-UA-Compatible" content="IE=8"/></code> which was throwing the document into IE8 mode, negatively affecting test results.
+  </code>
+</p>
 <script>
 var aryTestCasePaths = [
 "TestCases/chapter07/7.8/7.8.4/7.8.4-1-s.js",
